try to fix layout issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -543,14 +543,14 @@ button.swal2-cancel {
 }
 
 .swiper-button-prev, .swiper-button-next {
-  width: 45px;
-  height: 45px;
+  width: 45px !important;
+  height: 45px !important;
   border-radius: 50%;
   background-color: var(--default-background);
-  color: var(--main-color);
+  color: var(--main-color) !important;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
   &:after {
-    font-size: 1rem;
+    font-size: 1rem !important;
     font-weight: 600;
   }
   &.swiper-button-prev {
